--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,6 +2,8 @@
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
 SUBDIRS = data
 
+TESTS_ENVIRONMENT = top_srcdir=$(top_srcdir)
+
 TESTS =	mknmz-1 mknmz-2 mknmz-3 mknmz-4 mknmz-5 \
 	mknmz-6 mknmz-7 mknmz-8 mknmz-9 mknmz-10 \
 	mknmz-11 mknmz-12 mknmz-13 mknmz-14 mknmz-15 \
