removed some workarounds.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -16,31 +16,26 @@ noinst_SCRIPTS = gtnmz
 EXTRA_DIST = gcnmz.in kwnmz.in mknmz.in nmzmerge.in adnmz.in lnnmz.in
 CLEANFILES  = gcnmz mknmz kwnmz nmzmerge adnmz lnnmz
 
-localedir   = $(prefix)/$(DATADIRNAME)/locale
 confdir     = $(sysconfdir)/$(PACKAGE)
-filterdir   = $(pkgdatadir)/filter
-indexdir    = $(localstatedir)/$(PACKAGE)/index
-perllibdir  = $(pkgdatadir)/pl
-templatedir = $(pkgdatadir)/template
 
 gcnmz: gcnmz.in Makefile
 	rm -f gcnmz
 	sed -e 's!%PERL%!$(PERL)!g' \
-	    -e 's!@PERLLIBDIR@!$(perllibdir)!g' $(srcdir)/gcnmz.in > gcnmz.tmp
+	    -e 's!@pkgdatadir@!$(pkgdatadir)!g' $(srcdir)/gcnmz.in > gcnmz.tmp
 	mv gcnmz.tmp gcnmz
 	chmod +x gcnmz
 
 kwnmz: kwnmz.in Makefile
 	rm -f kwnmz
 	sed -e 's!%PERL%!$(PERL)!g' \
-	    -e 's!@PERLLIBDIR@!$(perllibdir)!g' $(srcdir)/kwnmz.in > kwnmz.tmp
+	    -e 's!@pkgdatadir@!$(pkgdatadir)!g' $(srcdir)/kwnmz.in > kwnmz.tmp
 	mv kwnmz.tmp kwnmz
 	chmod +x kwnmz
 
 nmzmerge: nmzmerge.in Makefile
 	rm -f nmzmerge
 	sed -e 's!%PERL%!$(PERL)!g' \
-	    -e 's!@PERLLIBDIR@!$(perllibdir)!g' $(srcdir)/nmzmerge.in > nmzmerge.tmp
+	    -e 's!@pkgdatadir@!$(pkgdatadir)!g' $(srcdir)/nmzmerge.in > nmzmerge.tmp
 	mv nmzmerge.tmp nmzmerge
 	chmod +x nmzmerge
 
@@ -48,24 +43,22 @@ mknmz: mknmz.in Makefile
 	rm -f mknmz
 	sed -e 's!%PERL%!$(PERL)!g' \
 	    -e 's!%ADDITIONAL_INC%!$(ADDITIONAL_INC)!g' \
-	    -e 's!@CONFDIR@!$(confdir)!g' \
-	    -e 's!@PERLLIBDIR@!$(perllibdir)!g' \
-	    -e 's!@FILTERDIR@!$(filterdir)!g' \
-	    -e 's!@TEMPLATEDIR@!$(templatedir)!g' $(srcdir)/mknmz.in >mknmz.tmp 
+	    -e 's!@pkgdatadir@!$(pkgdatadir)!g' \
+	    -e 's!@CONFDIR@!$(confdir)!g' $(srcdir)/mknmz.in >mknmz.tmp 
 	mv mknmz.tmp mknmz
 	chmod +x mknmz
 
 adnmz: adnmz.in Makefile
 	rm -f adnmz
 	sed -e 's!%PERL%!$(PERL)!g' \
-	    -e 's!@PERLLIBDIR@!$(perllibdir)!g' $(srcdir)/adnmz.in > adnmz.tmp
+	    -e 's!@pkgdatadir@!$(pkgdatadir)!g' $(srcdir)/adnmz.in > adnmz.tmp
 	mv adnmz.tmp adnmz
 	chmod +x adnmz
 
 lnnmz: lnnmz.in Makefile
 	rm -f lnnmz
 	sed -e 's!%PERL%!$(PERL)!g' \
-	    -e 's!@PERLLIBDIR@!$(perllibdir)!g' $(srcdir)/lnnmz.in > lnnmz.tmp
+	    -e 's!@pkgdatadir@!$(pkgdatadir)!g' $(srcdir)/lnnmz.in > lnnmz.tmp
 	mv lnnmz.tmp lnnmz
 	chmod +x lnnmz
 
