--- a/scripts/adnmz.in
+++ b/scripts/adnmz.in
@@ -1,7 +1,7 @@
 #! %PERL%
 # -*- Perl -*-
 # adnmz.pl - make NMZ.field.adjacency
-# $Id: adnmz.in,v 1.2 2001-08-08 09:05:50 knok Exp $
+# $Id: adnmz.in,v 1.3 2001-11-06 05:28:36 rug Exp $
 #
 # Copyright (C) 2001 Hajime BABA  All rights reserved.
 # Copyright (C) 2001 Namazu Project  All rights reserved.
@@ -30,7 +30,9 @@ package adnmz;
 use strict;
 use Cwd;
 use File::Spec;
-push(@INC, '@PERLLIBDIR@');
+
+my $PKGDATADIR = $ENV{'pkgdatadir'} || "@pkgdatadir@";
+push(@INC, $PKGDATADIR . "/pl");
 require 'nmzidx.pl';
 
 my $backup;
