--- a/scripts/lnnmz.in
+++ b/scripts/lnnmz.in
@@ -1,7 +1,7 @@
 #! %PERL%
 # -*- Perl -*-
 # lnnmz - program to make NMZ.field.link
-# $Id: lnnmz.in,v 1.2 2001-08-08 09:05:50 knok Exp $
+# $Id: lnnmz.in,v 1.3 2001-11-06 05:28:36 rug Exp $
 #
 # Copyright (C) 2000 osamu2001@livedoor.com  All rights reserved.
 # Copyright (C) 2000 furukawa@tcp-ip.or.jp  All rights reserved.
@@ -32,7 +32,9 @@ package lnnmz;
 use strict;
 use Cwd;
 use File::Spec;
-push(@INC, '@PERLLIBDIR@');
+
+my $PKGDATADIR = $ENV{'pkgdatadir'} || "@pkgdatadir@";
+push(@INC, $PKGDATADIR . "/pl");
 require 'nmzidx.pl';
 
 # for example
