--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,7 +8,7 @@ TESTS_ENVIRONMENT = top_srcdir=$(top_srcdir) top_builddir=$(top_builddir) \
 TESTS =	mknmz-1 mknmz-2 mknmz-3 mknmz-4 mknmz-5 \
 	mknmz-6 mknmz-7 mknmz-8 mknmz-9 mknmz-10 \
 	mknmz-11 mknmz-12 mknmz-13 mknmz-14 mknmz-15 \
-	mknmz-16 \
+	mknmz-16 mknmz-17 \
 	gcnmz-1 \
 	idxdiff-1 idxdiff-2 idxdiff-3 \
 	namazu-1 namazu-2 namazu-3 namazu-4 namazu-5 \
@@ -16,7 +16,7 @@ TESTS =	mknmz-1 mknmz-2 mknmz-3 mknmz-4 mknmz-5 \
 	namazu-11 \
 	namazu-cgi-1 namazu-cgi-2 namazu-cgi-3 namazu-cgi-4 \
 	namazu-cgi-5 namazu-cgi-6 namazu-cgi-7 namazu-cgi-8 \
-	namazu-cgi-9 \
+	namazu-cgi-9 namazu-cgi-10 \
 	ja-mknmz-1 ja-namazu-cgi-1
 
 clean-local:
