--- a/scripts/mailutime.in
+++ b/scripts/mailutime.in
@@ -3,7 +3,8 @@
 #
 # mailutime - a tool to unify a file time stamp with 
 #             RFC 822 'Date:' field in a mail.
-# $Id: mailutime.in,v 1.3 2000-12-04 06:40:04 shirai Exp $
+#             It also supports MHonArc messages.
+# $Id: mailutime.in,v 1.4 2002-02-19 01:27:57 knok Exp $
 #
 # Version 1.0.2    [12/12/1998]
 #
@@ -20,6 +21,7 @@
 #   specified mailbox (MH format).
 #
 # Copyright (C) 1998-1999 Satoru Takabayashi  All rights reserved.
+# Copyright (C) 2002 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -64,7 +66,7 @@ sub main () {
 	$fh->open("$file") || die "$!: $file\n";
 	while (<$fh>) {
 	    last if /^$/;
-	    $date = $1 if /^Date: (.*)/i;
+	    $date = $1 if /^(?:<!--X-)?Date: (.*)/i;
 	}
 	unless (defined($date)) {
 	    print STDERR "$file: 'Date:' not found!\n";
